# urdfdom-release

./: .hg_archival.txt  .hgtags  0001-Added-a-package.xml-file.patch  0001-Added-install-rule-for-package.xml.patch  0001-Adding-install-rule-for-package.xml.patch  0001-add-install-rule-for-package.xml.patch  0001-install-rule-for-package.xml.patch  0001-ros-ifying.patch  0002-install-as-catkin-package.patch  0002-update-package.xml-file.patch  0003-update-package.xml-depends.patch  0004-adding-a-description.patch  0005-bump-version-in-package.xml.patch  0006-custom-CMakeLists.txt-and-package.xml.patch  CMakeLists.txt  README.md  bloom.conf  catkin.conf  debian.store  package.xml  patches.conf  releaser_history.json  stack.xml  stack.yaml  tracks.yaml
debian/: changelog  control  gbp.conf  rules
groovy/: package.xml
hydro/: package.xml
indigo/: package.xml
