<?xml version="1.0"?>
<package>
  <name>urdfdom</name>
  <version>0.2.3</version>
  <description></description>
  <maintainer email="hsu@osrfoundation.org">John Hsu</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/urdf</url>
  <url type="bugtracker">https://code.ros.org/trac/ros-pkg</url>
  <url type="repository">http://kforge.ros.org/robotmodel/urdfdom</url>

  <author>Wim Meeussen, John Hsu</author>

  <build_depend version_gte="0.2.1">urdfdom_headers</build_depend>
  <run_depend version_gte="0.2.1">urdfdom_headers</run_depend>

  <build_depend>boost</build_depend>
  <run_depend>boost</run_depend>

  <build_depend>tinyxml</build_depend>
  <run_depend>tinyxml</run_depend>

  <buildtool_depend>cmake</buildtool_depend>
</package>
